<resources>
    <string name="app_name">Spot Me</string>
    <string name="title_activity_chat_screen">Chat_screen</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chat__screen">Chat_Screen</string>
    <string name="edit_message">Edit a message</string>
    <string name="button_next">Next</string>
    <string name="set_information">I am&#8230;</string>
    <string name="my_name">My name is:</string>
    <string name="namen">Name&#8230;</string>
    <string name="agea">Age:</string>
    <string name="gender">Gender:</string>
    <string name="my_age">&#8230;</string>
    <string name="my_gender">&#8230;</string>
    <string name="want">I want to:</string>
    <string name="goal">I can </string>
    <string name="lift">I am a </string>
    <string name="i_lift">&#8230;</string>
    <string name="lbs">lbs</string>
    <string name="seeking">I am seeking: </string>
    <string name="weight">My weight is&#8230;</string>
    <string name="my_weight">&#8230;</string>
    <string name="gym_attendance">I go to the gym</string>
    <string name="a_week">a week.</string>
    <string name="r_comments">Additional comments:</string>
    <string name="r_comments_box">This person...</string>
    <string name="r_title" >Rate Your Partner</string>
    <string name="r_accurate">Was their profile accurate?</string>
    <string name="r_good">Were they, overall, a good person to workout with?</string>
    <string name="r_help">Were you able to help each other?</string>
    <string-array name="YN_options">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="select_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="select_age">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>
    <string-array name="i_am_seeking">
        <item>A male gym partner</item>
        <item>A female gym partner</item>
        <item>Either one</item>
    </string-array>
    <string-array name="skill_level">
        <item>beginner.</item>
        <item>intermediate gym-goer.</item>
        <item>expert gym-goer.</item>
    </string-array>
    <string-array name="frequency">
        <item>1-2 times</item>
        <item>3-5 times</item>
        <item>6-7 times</item>
    </string-array>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="fitness_level">Fitness Level</string>
    <string name="availability">Availability</string>
    <string name="match_picture_desc">Match Picture</string>
    <string name="action_sign_in">Login</string>
    <string name="LoginTest">Login</string>
    <string name="WhatGym">What gym do you go to?</string>
    <string name="FirstSignUp">Sign Up</string>
    <string name="PhoneNumberSignUp">Enter Phone Number:</string>
</resources>
