<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">

    <LinearLayout
        android:id="@+id/linlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:contentDescription="@string/match_picture_desc"
            app:srcCompat="@drawable/match_avatar" />

        <TextView
            android:id="@+id/matchName"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="50sp" />

        <TextView
            style="@style/dialog_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age" />

        <TextView
            android:id="@+id/match_age"
            style="@style/dialog_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/fitnessLevel"
            style="@style/dialog_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitness_level" />

        <TextView
            android:id="@+id/match_fitness_level"
            style="@style/dialog_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/weight"
            style="@style/dialog_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Weight" />

        <TextView
            android:id="@+id/match_weight"
            style="@style/dialog_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>